--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -66,7 +66,7 @@
                   </div>
                 </div>
                 <div class="mb-3 col-md-6">
-                  <label class="form-label" for="phoneNumber">Facebook Account</label>
+                  <label class="form-label" for="phoneNumber">Facebook Profile URL</label>
                   <div class="input-group input-group-merge">
                     <input type="text" id="fb_id" placeholder="Enter your facebook" name="fb_id" class="form-control" value="{{request.user.fb_id}}" />
                   </div>
