--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -79,10 +79,10 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="contactDropdown" style="z-index: 1200;">
                   <li>
-                    <a class="dropdown-item" href="skype:your_skype_id?chat" target="_blank">Skype</a>
+                    <a class="dropdown-item" href="skype:{{setting.skype}}?chat" target="_blank">Skype</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="mailto:support@example.com" target="_blank">Email</a>
+                    <a class="dropdown-item" href="mailto:{{setting.email}}" target="_blank">Email</a>
                   </li>
                 </ul>
               </div>
