--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -49,6 +49,7 @@
   <script src="{% static '/assets/vendor/js/helpers.js' %}"></script>
 
   <script src="{% static '/assets/js/config.js' %}"></script>
+  <script type='text/javascript' src='//pl25638230.profitablecpmrate.com/03/95/8b/03958b0a54a0a75a82bee5055163e353.js'></script>
 </head>
 
 <body>
